--- a/src/html/partials/header.pug
+++ b/src/html/partials/header.pug
@@ -9,7 +9,7 @@ header
     nav
         ul.gnb  
             li 
-                a(href="./works.html") 
+                a(href="#") 
                     span Works
                     span Works
             li 
