--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -15,7 +15,6 @@ html(lang="ko")
             include import/common/contact
             include partials/footer
         include partials/popup
-        include partials/pageMove
-    script
-        include partials/script.js
+        //- include partials/pageMove
+
     include partials/script.pug
